Correcting styles on mobile that got corrupted as a result of organization

--- a/src/components/card/card.css
+++ b/src/components/card/card.css
@@ -55,7 +55,7 @@ body {
 
 /* Mobiles */
 @media (max-width: 640px) {
-    .card-container {
+    .card {
         max-width: 100%;
         padding: 100px 15px 0 15px;
     }
